// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch Button (unit tests) when has a label should match the snapshot 1`] = `
<kv-switch-button label="Switch">
  <mock:shadow-root>
    <div class="switch-button-container">
      <span class="label">
        Switch
      </span>
      <div class="switch-button-content">
        <div class="switch-button switch-button--large" part="button">
          <div class="icon-square" part="icon-square">
            <kv-svg-icon name="kv-done-all" part="icon-svg"></kv-svg-icon>
          </div>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</kv-switch-button>
`;

exports[`Switch Button (unit tests) when uses default props should match the snapshot 1`] = `
<kv-switch-button>
  <mock:shadow-root>
    <div class="switch-button-container">
      <div class="switch-button-content">
        <div class="switch-button switch-button--large" part="button">
          <div class="icon-square" part="icon-square">
            <kv-svg-icon name="kv-done-all" part="icon-svg"></kv-svg-icon>
          </div>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</kv-switch-button>
`;
